--- a/common/tmux.conf
+++ b/common/tmux.conf
@@ -1,7 +1,9 @@
-#
-#sschange default ctrl-b to ctrl-g , change this to ctrl-g if you prefer screen's setting
+# change default ctrl-b to ctrl-g
 set -g prefix C-a
 unbind C-b
+
+# enable mouse mode for switching pane and copy/paste
+set -g mouse on
 
 # eliminate the default delay
 set -s escape-time 1
@@ -18,17 +20,23 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!!"
 # send prefix to other programms
 bind C-a send-prefix
 
-# prefix s for horizontal split
-bind s split-window -v
+# prefix | for horizontal split
+bind | split-window -h
 
-# prefix v for vertical split
-bind v split-window -h
+# prefix - for vertical split
+bind - split-window -v
 
 # vim key bindings for pane switch
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+
+# switch pane using only alt/meta/option key + h/j/k/l keys
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
 
 # vim key binding for pane resizing
 bind -r H resize-pane -L 5
@@ -40,45 +48,6 @@ bind -r L resize-pane -R 5
 bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
 
-# status bar colors
-set -g status-fg white
-set -g status-bg black
-
-# window bar colors
-set -g window-status-fg cyan
-set -g window-status-bg default
-set -g window-status-attr dim
-
-# window bar current window color
-set -g window-status-current-fg white
-set -g window-status-current-bg red
-set -g window-status-current-attr bright
-
-# pane color
-set -g pane-border-fg black
-set -g pane-border-bg blue
-set -g pane-active-border-fg black
-set -g pane-active-border-bg blue
-
-# command line color
-set -g message-fg white
-set -g message-bg black
-set -g message-attr bright
-
-# status bar
-set -g status-left "#[fg=red]#[bg=white]#S"
-set -g status-interval 60
-
-# centre the window list
-set -g status-justify centre
-
-# 256 color
-set -g default-terminal "screen-256color"
-
-# monitor other window for actions
-setw -g monitor-activity on
-set -g visual-activity on
-
 # vi key binding for tmux buffer nav
 setw -g mode-keys vi
 bind-key -t vi-copy v begin-selection
@@ -88,16 +57,95 @@ bind Escape copy-mode
 unbind p
 bind p paste-buffer
 
-
-# install xclip to make the following settings functional
-# sudo apt-get install xclip
-
-#bind C-c run "tmux save-buffer - | xclip -i -sel clipboard"
-#bind C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
-
-# issue command in all panes
-# bind C-s set-window-option synchronize-panes
-
 # switch between sessions
 bind -r C-right switch-client -p
 bind -c C-left switch-client -n
+
+######################
+### DESIGN CHANGES ###
+######################
+
+# active panes
+set -g pane-border-fg black
+set -g pane-active-border-fg brightred
+
+# status line
+set -g status-justify left
+set -g status-bg default
+set -g status-fg colour12
+set -g status-interval 2
+
+# messaging
+set -g message-fg black
+set -g message-bg yellow
+set -g message-command-fg blue
+set -g message-command-bg black
+
+# window mode
+setw -g mode-bg colour6
+setw -g mode-fg colour0
+
+# window status
+setw -g window-status-format " #F#I:#W#F "
+setw -g window-status-current-format " #F#I:#W#F "
+setw -g window-status-format "#[fg=magenta]#[bg=black] #I #[bg=cyan]#[fg=colour8] #W "
+setw -g window-status-current-format "#[bg=brightmagenta]#[fg=colour8] #I #[fg=colour8]#[bg=colour14] #W "
+setw -g window-status-current-bg colour0
+setw -g window-status-current-fg colour11
+setw -g window-status-current-attr dim
+setw -g window-status-bg green
+setw -g window-status-fg black
+setw -g window-status-attr reverse
+
+# info on left (I don't have a session display for now)
+set -g status-left ''
+
+# loud or quiet?
+set-option -g visual-activity off
+set-option -g visual-bell off
+set-option -g visual-silence off
+set-window-option -g monitor-activity off
+set-option -g bell-action none
+
+set -g default-terminal "screen-256color"
+
+# the modes
+setw -g clock-mode-colour colour135
+setw -g mode-attr bold
+setw -g mode-fg colour196
+setw -g mode-bg colour238
+
+# the panes
+set -g pane-border-bg colour235
+set -g pane-border-fg colour238
+set -g pane-active-border-bg colour236
+set -g pane-active-border-fg colour51
+
+# the statusbar
+set -g status-position bottom
+set -g status-bg colour234
+set -g status-fg colour137
+set -g status-attr dim
+set -g status-left ''
+set -g status-right '#[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
+set -g status-right-length 50
+set -g status-left-length 20
+
+setw -g window-status-current-fg colour81
+setw -g window-status-current-bg colour238
+setw -g window-status-current-attr bold
+setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
+
+setw -g window-status-fg colour138
+setw -g window-status-bg colour235
+setw -g window-status-attr none
+setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
+
+setw -g window-status-bell-attr bold
+setw -g window-status-bell-fg colour255
+setw -g window-status-bell-bg colour1
+
+# the messages
+set -g message-attr bold
+set -g message-fg colour232
+set -g message-bg colour166
