--- a/common/tmux.conf
+++ b/common/tmux.conf
@@ -45,7 +45,7 @@ bind -r C-l select-window -t :+
 # vi key binding for tmux buffer nav
 setw -g mode-keys vi
 bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 unbind [
 bind Escape copy-mode
 unbind p
