--- a/common/tmux.conf
+++ b/common/tmux.conf
@@ -42,14 +42,20 @@ bind -r L resize-pane -R 5
 bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
 
+# copy-paste integration
+set-option -g default-command "reattach-to-user-namespace -l bash"
+
 # vi key binding for tmux buffer nav
 setw -g mode-keys vi
 bind-key -t vi-copy v begin-selection
 bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 unbind [
 bind Escape copy-mode
 unbind p
 bind p paste-buffer
+bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
 
 # switch between sessions
 bind -r C-right switch-client -p
