--- a/common/tmux.conf
+++ b/common/tmux.conf
@@ -161,3 +161,9 @@ setw -g window-status-bell-bg colour1
 set -g message-attr bold
 set -g message-fg colour232
 set -g message-bg colour166
+
+# Tmux Plugin Manager
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+run '~/.tmux/plugins/tpm/tpm'
