--- a/common/tmux.conf
+++ b/common/tmux.conf
@@ -164,6 +164,8 @@ set -g message-bg colour166
 
 # Tmux Plugin Manager
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 run '~/.tmux/plugins/tpm/tpm'
