--- a/common/tmux.conf
+++ b/common/tmux.conf
@@ -54,15 +54,12 @@ bind -r L resize-pane -R 5
 bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
 
-# copy-paste integration
-set-option -g default-command "reattach-to-user-namespace -l bash"
-
 # vi key binding for tmux buffer nav
 setw -g mode-keys vi
 bind-key -T edit-mode-vi Up send-keys -X history-up
 bind-key -T edit-mode-vi Down send-keys -X history-down
 unbind-key -T copy-mode-vi Space     ;   bind-key -T copy-mode-vi v send-keys -X begin-selection
-unbind-key -T copy-mode-vi Enter     ;   bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+unbind-key -T copy-mode-vi Enter     ;   bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
 unbind-key -T copy-mode-vi C-v       ;   bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 unbind-key -T copy-mode-vi [         ;   bind-key -T copy-mode-vi [ send-keys -X begin-selection
 unbind-key -T copy-mode-vi ]         ;   bind-key -T copy-mode-vi ] send-keys -X copy-selection
@@ -70,7 +67,8 @@ unbind [
 bind Escape copy-mode
 unbind p
 bind p paste-buffer
-bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
 
 # switch between sessions
 bind -r C-right switch-client -p
@@ -81,36 +79,28 @@ bind -c C-left switch-client -n
 ######################
 
 # active panes
-set -g pane-border-fg black
-set -g pane-active-border-fg brightred
+set -g pane-border-style fg=black
+set -g pane-active-border-style fg=brightred
 
 # status line
 set -g status-justify left
-set -g status-bg default
-set -g status-fg colour12
+set -g status-style bg=default,fg=colour12
 set -g status-interval 2
 
 # messaging
-set -g message-fg black
-set -g message-bg yellow
-set -g message-command-fg blue
-set -g message-command-bg black
+set -g message-style fg=black,bg=yellow
+set -g message-command-style fg=blue,bg=black
 
 # window mode
-setw -g mode-bg colour6
-setw -g mode-fg colour0
+setw -g mode-style bg=colour6,fg=colour0
 
 # window status
 setw -g window-status-format " #F#I:#W#F "
 setw -g window-status-current-format " #F#I:#W#F "
 setw -g window-status-format "#[fg=magenta]#[bg=black] #I #[bg=cyan]#[fg=colour8] #W "
 setw -g window-status-current-format "#[bg=brightmagenta]#[fg=colour8] #I #[fg=colour8]#[bg=colour14] #W "
-setw -g window-status-current-bg colour0
-setw -g window-status-current-fg colour11
-setw -g window-status-current-attr dim
-setw -g window-status-bg green
-setw -g window-status-fg black
-setw -g window-status-attr reverse
+setw -g window-status-current-style bg=colour0,fg=colour11,dim
+setw -g window-status-style bg=green,fg=black,reverse
 
 # info on left (I don't have a session display for now)
 set -g status-left ''
@@ -126,50 +116,33 @@ set -g default-terminal "screen-256color"
 
 # the modes
 setw -g clock-mode-colour colour135
-setw -g mode-attr bold
-setw -g mode-fg colour196
-setw -g mode-bg colour238
+setw -g mode-style fg=colour196,bg=colour238,bold
 
 # the panes
-set -g pane-border-bg colour235
-set -g pane-border-fg colour238
-set -g pane-active-border-bg colour236
-set -g pane-active-border-fg colour51
+set -g pane-border-style bg=colour235,fg=colour238
+set -g pane-active-border-style bg=colour236,fg=colour51
 
 # the statusbar
 set -g status-position bottom
-set -g status-bg colour234
-set -g status-fg colour137
-set -g status-attr dim
+set -g status-style bg=colour234,fg=colour137,dim
 set -g status-left ''
 set -g status-right '#{prefix_highlight} #[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
 set -g status-right-length 50
 set -g status-left-length 20
 
-setw -g window-status-current-fg colour81
-setw -g window-status-current-bg colour238
-setw -g window-status-current-attr bold
+setw -g window-status-current-style fg=colour81,bg=colour238,bold
 setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
 
-setw -g window-status-fg colour138
-setw -g window-status-bg colour235
-setw -g window-status-attr none
+setw -g window-status-style fg=colour138,bg=colour235,none
 setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
 
-setw -g window-status-bell-attr bold
-setw -g window-status-bell-fg colour255
-setw -g window-status-bell-bg colour1
+setw -g window-status-bell-style fg=colour255,bg=colour1,bold
 
 # the messages
-set -g message-attr bold
-set -g message-fg colour232
-set -g message-bg colour166
+set -g message-style fg=colour232,bg=colour166,bold
 
 # Tmux Plugin Manager
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-set -g @plugin 'tmux-plugins/tmux-copycat'
-set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
 run '~/.tmux/plugins/tpm/tpm'
