--- a/common/tmux.conf
+++ b/common/tmux.conf
@@ -1,6 +1,7 @@
-# change default ctrl-b to ctrl-g
-set -g prefix C-a
+# change default ctrl-b to ctrl-a
 unbind C-b
+set -g prefix C-a
+bind a send-prefix
 
 # enable mouse mode for switching pane and copy/paste
 set -g mouse on
@@ -72,7 +73,7 @@ bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
 
 # switch between sessions
 bind -r C-right switch-client -p
-bind -c C-left switch-client -n
+bind -r C-left switch-client -n
 
 ######################
 ### DESIGN CHANGES ###
